# gstjitsimeet

./: .gitmodules  README.md  meson.build  submodules.txt
src/: auto-gst-object.hpp  autoptr.hpp  cert.cpp  cert.hpp  dynamic-switch-example.cpp  example.cpp  gstutil  hostaddr.cpp  hostaddr.hpp  ice.cpp  ice.hpp  jingle.cpp  jingle.hpp  jitsi  jitsibin.cpp  jitsibin.hpp  lib.cpp  macros  pem.cpp  pem.hpp  props.cpp  props.hpp  two-room-example.cpp  util
src/examples/: dynamic-pipeline-switch.cpp  helper.cpp  helper.hpp  receiver.cpp  room-to-room.cpp
